add_subdirectory(aes128)
add_subdirectory(benchmark_garbling)
add_subdirectory(benchmark_integers)
add_subdirectory(benchmark_nn_layers)
add_subdirectory(benchmark_operations)
add_subdirectory(benchmark_providers)
add_subdirectory(cryptonets)
add_subdirectory(evaluate_circuit_from_file)
add_subdirectory(example_template)
add_subdirectory(millionaires_problem)
add_subdirectory(sha256)
add_subdirectory(triple_generator)

if (MOTION_BUILD_ONNX_ADAPTER)
  add_subdirectory(onnx2motion)
endif (MOTION_BUILD_ONNX_ADAPTER)

if (MOTION_BUILD_HYCC_ADAPTER)
  add_subdirectory(hycc2motion)
endif (MOTION_BUILD_HYCC_ADAPTER)
